app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page


body {
  min-height: 100vh;
}

.search-bar {
  width: 100%; /* Adjust the width as needed */
  height: 60px; /* Adjust the height as needed */
  // margin: 1rem;
}

.card-home {
  height: 30vh;
  border-radius: 6px;
  margin: 1rem;
  box-shadow: 1px 1px 5px white;
  object-fit: center;
  overflow: hidden;
}

.card-row {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  &.search-row {
    grid-template-columns: 1fr 3fr 1fr;
  }
}

.search {
  margin: 1rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  color: white;
  font-family:Arial, Helvetica, sans-serif;
  font-weight: 500;
}

.search-wrapper {
  padding: 0 2rem;
  background: linear-gradient(-45deg, #000000, #941414, #d36810, #fffeff);
	animation: gradient 10s ease infinite;
}

.top-left {
  align-self: flex-start;
}

.middle-right {
  align-self: flex-end;
}

.bottom {
  align-self: center;
}

@-webkit-keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

